SOE-3276: Banner overlay: button in wysiwyg not responsive scaling codeclimate fixes

--- a/scss/components/_soe_beans.scss
+++ b/scss/components/_soe_beans.scss
@@ -350,16 +350,16 @@
       @include breakpoint-max(medium) {
         line-height: 1.2em;
       }
+    }
 
-      a {
+    .bean-stanford-postcard-linked .postcard-linked-title a {
 
-        @include breakpoint-max(medium) {
-          font-size: .9em;
-        }
+      @include breakpoint-max(medium) {
+        font-size: .9em;
+      }
 
-        @include breakpoint-max(small) {
-          font-size: 1.2em;
-        }
+      @include breakpoint-max(small) {
+        font-size: 1.2em;
       }
     }
   }
